--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
 	grid-area: h;
-	background-color: #fff;
+	background-color: #dd4b39;
 }
 
 .header img {
-	width: 100px;
+	width: 50px;
 }
