--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,4 +1,4 @@
-/* .coverImg img {
+.coverImg img {
 	width: 100%;
 	height: 200px;
 }
@@ -10,4 +10,4 @@
 
 .userInfo img {
 	width: 200px;
-} */
+}
