--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,11 +1,14 @@
 .dialogs {
 	display: grid;
 	grid-template-columns: 3fr 7fr;
+
 }
 
 .dialogItems {
 	padding-left: 10px;
 	padding-right: 10px;
+	color: black;
+
 }
 
 .dialogItems .active {
