add post function added

--- a/src/components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.css
@@ -1,2 +1,21 @@
-.dialog {
+.dialog{
+  display: flex;
+  align-items: center;
 }
+
+.dialog a{
+  text-decoration: none;
+  color: black;
+}
+
+.dialog img{
+  width: 50px;
+  margin: 5px;
+}
+
+.dialog a.active {
+	text-decoration: none;
+	color: #dd4b39;
+}
+
+
