--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,7 +1,13 @@
-.post{
+.post {
 	margin-bottom: 20px;
 }
 
-.post img{
+.postContent {
+	display: flex;
+	align-items: center;
+}
+
+.post img {
 	width: 50px;
+	margin: 5px;
 }
