--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -17,3 +17,12 @@
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
+.addMessage {
+	margin-top: 30px;
+}
+
+.dFlex{
+	display: flex;
+	flex-direction: column;
+}
