--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,25 @@
 .header {
 	grid-area: h;
 	background-color: #dd4b39;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .header img {
 	width: 50px;
+}
+
+.loginBlock {
+	margin-right: 10px;
+}
+
+.loginBlock a {
+	color: #fff;
+	text-decoration: none;
+}
+
+.authInfo{
+	display: flex;
+	flex-direction: row;
 }
