api.js as DAL is created

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,7 +19,11 @@
 	text-decoration: none;
 }
 
-.authInfo{
+.loginInfo {
 	display: flex;
 	flex-direction: row;
+}
+
+.loginInfo img {
+	margin-left: 10px;
 }
