--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,14 +1,27 @@
-.coverImg img {
-	width: 100%;
-	height: 200px;
+.profileInfo {
+	display: flex;
+
 }
 
 .userInfo {
 	margin-top: 10px;
-	display: flex;
+	width: 60%;
+	background: rgb(221, 75, 57, 0.06);
+	width: 60%;
+	padding: 20px;
+	border-radius: 20px;
 }
 
-.userInfo img {
+.avatar{
+	margin-top: 10px;
+	width: 200px;
+	margin-right: 20px;
+	background: rgb(221, 75, 57, 0.06);
+	padding: 20px;
+	border-radius: 20px;
+	height: 100%;
+}
+.avatar img {
 	width: 200px;
 	height: 200px;
 	margin-right: 30px;
@@ -44,10 +57,10 @@
 	margin-top: 5px;
 }
 
-.jobItems{
+.jobItems {
 	margin-bottom: 10px;
 }
 
-.job span{
+.job span {
 	font-weight: bold;
 }
